--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-/*IMPORTAR ARCHIVOS DE SASS*/
 /*CENTAR LAS IMAGENES*/
 /*SEPARAR LAS IMAGENES DEL MARGEN DE ARRIBA Y ABAJO*/
 /*ESTILOS DE PARRAFO*/
@@ -8,91 +6,26 @@
 /*ESTILO IMAGENES*/
 /*FLEXBOX*/
 /*TRANSICION IMAGENES*/
-.cabecera p {
-  text-align: justify;
-  font-family: roboto;
-  max-width: 70%;
-  font-size: 1.2rem;
-  line-height: 1.7;
-  word-spacing: 0.03em;
-  margin: 1.5rem auto;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .cabecera p {
-    max-width: 80%;
-  }
-}
-.nyEspecialSection h2 {
-  text-align: center;
-  margin-top: 3rem;
-  font-family: sora;
-  font-style: italic;
-  font-weight: bold;
-}
-.nyEspecialSection .img-1 {
-  margin-top: 1rem;
-  max-width: 65%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.nyEspecialSection p {
-  text-align: justify;
-  font-family: roboto;
-  max-width: 70%;
-  font-size: 1.2rem;
-  line-height: 1.7;
-  word-spacing: 0.03em;
-  margin: 1.5rem auto;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .nyEspecialSection .img-1 {
-    max-width: 75%;
-  }
-  .nyEspecialSection p {
-    max-width: 75%;
-  }
-  .nyEspecialSection video {
-    max-width: 70%;
-    border-radius: 2.5px;
-    border-color: bisque !important;
-    border-width: 6px !important;
-  }
-  .nyEspecialSection h5 {
-    font-size: 1.6rem;
-    font-family: lato;
-    font-style: italic;
-  }
-}
 .hero-section {
   position: relative;
 }
-.hero-section .carousel-inner img {
+.hero-section .myCarousel img {
   -o-object-fit: cover;
-     object-fit: cover; /*AJUSTA IMAGEN AL TAMAÑO DEL CONTENEDOR SIN DEFORMARLA*/
-  height: 780px; /*DEFINE ALTURA FIJA*/
+     object-fit: cover;
+  height: 773px;
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .hero-section .carousel-inner img {
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: 1100px;
-  }
+.hero-section .myCarousel .h5Container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 }
-.hero-section .h5Container {
-  position: absolute; /* Permite colocar el texto sobre el carrusel */
-  top: 0; /* Inicia desde la parte superior del contenedor */
-  left: 0; /* Inicia desde el lado izquierdo del contenedor */
-  width: 100%; /* Asegura que el contenedor del texto abarque todo el ancho */
-  height: 100%; /* Asegura que abarque toda la altura del carrusel */
-  display: flex; /* Activa Flexbox */
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
-  z-index: 10; /* Asegura que esté por encima de las imágenes del carrusel */
-}
-.hero-section .h5Container h5 {
+.hero-section .myCarousel .h5Container h5 {
   font-size: 3.5rem;
   color: white;
   background-color: rgba(0, 0, 0, 0.6);
@@ -100,112 +33,26 @@
   border-radius: 10px;
   text-align: center;
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .hero-section .h5Container h5 {
-    font-size: 3rem;
-  }
-}
 
-.historiaNY h2 {
-  color: white;
-  font-family: sora;
-  font-style: italic;
-  font-weight: bold;
-  margin-top: 2rem;
-  font-family: sora;
-  font-size: 1.8rem;
-}
-.historiaNY .img-1 {
-  max-width: 65%;
-  border-radius: 3px;
-}
-.historiaNY P {
+.cabecera p {
   text-align: justify;
-  font-family: roboto;
-  max-width: 70%;
+  font-family: poppins;
+  max-width: 65%;
   font-size: 1.2rem;
   line-height: 1.7;
   word-spacing: 0.03em;
   margin: 1.5rem auto;
 }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  h2 {
-    font-size: 1.4rem;
-  }
-  .historiaNY .img-1 {
-    max-width: 65%;
-    margin-top: 1rem;
-  }
-  .historiaNY p {
-    max-width: 80%;
-    margin-top: 2rem;
-  }
-  .accordionDates {
-    max-width: 80%;
-    margin: 3rem auto; /* Separación de las imágenes de arriba */
-    border: 5px solid #ffbe0b; /* Amarillo vibrante para el borde */
-    border-radius: 15px; /* Bordes más suaves */
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Sombra para mayor impacto visual */
-    padding: 1rem; /* Espacio interno */
-  }
-  .accordion-item button {
-    color: #ffffff; /* Texto blanco para contraste */
-    font-weight: bold;
-    background-color: #ff4500; /* Naranja fuerte para los botones */
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    transition: transform 0.3s ease, background-color 0.3s ease; /* Efecto de animación */
-    margin: 10px 0; /* Espaciado entre botones */
-  }
-  .accordion-item button:hover {
-    background-color: #ff0000; /* Rojo más fuerte al pasar el cursor */
-    transform: scale(1.05); /* Ligero aumento al hacer hover */
-    cursor: pointer;
-  }
-  .accordion-item p {
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2); /* Sombra suave */
-    font-family: "Poppins", sans-serif;
-    background-color: #e0ff4f; /* Amarillo neón para el fondo del texto */
-    color: #333; /* Texto oscuro para legibilidad */
-    border-left: 8px solid #ff4500; /* Línea decorativa vibrante */
-    border-radius: 8px;
-    padding: 15px;
-    margin: 0 auto;
-  }
-  h3 {
-    max-width: 80%;
-    text-align: center;
-    margin: 0 auto;
-  }
-  .buttonLink {
-    background-color: #e0ff4f;
-    display: block;
-    margin: 0 auto;
-    max-width: 40%;
-    color: black;
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    transition: 0.1s;
-    transition-timing-function: linear;
-    transition-property: background-color, color;
-  }
-  .buttonLink:hover {
-    background-color: pink;
-    color: white;
-  }
+.cabecera .containerImg img {
+  max-width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 3px;
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .barriosNY h2 {
-    margin-top: 3rem;
-    text-align: center;
-    font-family: sora;
-    font-size: 1.6rem;
-    font-family: sora;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 2rem;
-    background-color: palevioletred !important;
-  }
+.cabecera .containerImg2 img {
+  border-radius: 3px;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=main.css.map */
